project1/syntax.output
Terminals unused in grammar

    BITOP_NOT
    BITOP_AND
    BITOP_OR
    BITOP_XOR
    ILLEGAL_TOKEN


State 17 conflicts: 1 shift/reduce
State 28 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ε
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT ID LC DefList RC
   14                | STRUCT ID
   15                | STRUCT ID LC DefList error

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB INT error

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP VarList error
   22       | ID LP error

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: ε
   28         | Stmt StmtList

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | Exp error
   36     | RETURN Exp error
   37     | IF LP Exp error Stmt
   38     | WHILE LP Exp error Stmt

   39 DefList: ε
   40        | Def DefList

   41 Def: Specifier DecList SEMI
   42    | Specifier DecList error
   43    | error DecList SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGN Exp

   48 Exp: Exp ASSIGN Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp LT Exp
   52    | Exp LE Exp
   53    | Exp GT Exp
   54    | Exp GE Exp
   55    | Exp NE Exp
   56    | Exp EQ Exp
   57    | Exp PLUS Exp
   58    | Exp MINUS Exp
   59    | Exp MUL Exp
   60    | Exp DIV Exp
   61    | LP Exp RP
   62    | MINUS Exp
   63    | NOT Exp
   64    | ID LP Args RP
   65    | ID LP RP
   66    | Exp LB Exp RB
   67    | Exp DOT ID
   68    | ID
   69    | INT
   70    | FLOAT
   71    | CHAR
   72    | LP Exp error
   73    | ID LP Args error
   74    | ID LP error
   75    | Exp LB Exp error

   76 Args: Exp COMMA Args
   77     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 8 15 18 21 22 35 36 37 38 42 43 72 73 74 75
    TYPE <node> (258) 11
    STRUCT <node> (259) 13 14 15
    IF <node> (260) 32 33 37
    WHILE <node> (261) 34 38
    RETURN <node> (262) 31 36
    FLOAT <node> (263) 70
    INT <node> (264) 17 18 69
    CHAR <node> (265) 71
    ID <node> (266) 13 14 15 16 19 20 21 22 64 65 67 68 73 74
    ASSIGN <node> (267) 47 48
    NOT <node> (268) 63
    DOT <node> (269) 67
    OR <node> (270) 50
    AND <node> (271) 49
    LT <node> (272) 51
    LE <node> (273) 52
    GT <node> (274) 53
    GE <node> (275) 54
    NE <node> (276) 55
    EQ <node> (277) 56
    PLUS <node> (278) 57
    MINUS <node> (279) 58 62
    MUL <node> (280) 59
    DIV <node> (281) 60
    BITOP_NOT <node> (282)
    BITOP_AND <node> (283)
    BITOP_OR <node> (284)
    BITOP_XOR <node> (285)
    LP <node> (286) 19 20 21 22 32 33 34 37 38 61 64 65 72 73 74
    RP <node> (287) 19 20 32 33 34 61 64 65
    LB <node> (288) 17 18 66 75
    RB <node> (289) 17 66
    SEMI <node> (290) 4 5 29 31 41 43
    COMMA <node> (291) 10 23 45 76
    LC <node> (292) 13 15 26
    RC <node> (293) 13 26
    ILLEGAL_TOKEN <node> (294)
    LOWER_ELSE (295)
    ELSE <node> (296) 33


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    Program <node> (43)
        on left: 1
        on right: 0
    ExtDefList <node> (44)
        on left: 2 3
        on right: 1 3
    ExtDef <node> (45)
        on left: 4 5 6 7 8
        on right: 3
    ExtDecList <node> (46)
        on left: 9 10
        on right: 4 7 10
    Specifier <node> (47)
        on left: 11 12
        on right: 4 5 6 7 8 25 41 42
    StructSpecifier <node> (48)
        on left: 13 14 15
        on right: 12
    VarDec <node> (49)
        on left: 16 17 18
        on right: 9 10 17 18 25 46 47
    FunDec <node> (50)
        on left: 19 20 21 22
        on right: 6
    VarList <node> (51)
        on left: 23 24
        on right: 19 21 23
    ParamDec <node> (52)
        on left: 25
        on right: 23 24
    CompSt <node> (53)
        on left: 26
        on right: 6 30
    StmtList <node> (54)
        on left: 27 28
        on right: 26 28
    Stmt <node> (55)
        on left: 29 30 31 32 33 34 35 36 37 38
        on right: 28 32 33 34 37 38
    DefList <node> (56)
        on left: 39 40
        on right: 13 15 26 40
    Def <node> (57)
        on left: 41 42 43
        on right: 40
    DecList <node> (58)
        on left: 44 45
        on right: 41 42 43 45
    Dec <node> (59)
        on left: 46 47
        on right: 44 45
    Exp <node> (60)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 29 31 32 33 34 35 36 37 38 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 66 67 72 75 76 77
    Args <node> (61)
        on left: 76 77
        on right: 64 73 76


State 0

    0 $accept: • Program $end
    1 Program: • ExtDefList
    2 ExtDefList: ε •  [$end]
    3           | • ExtDef ExtDefList
    4 ExtDef: • Specifier ExtDecList SEMI
    5       | • Specifier SEMI
    6       | • Specifier FunDec CompSt
    7       | • Specifier ExtDecList error
    8       | • Specifier error
   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   11 Specifier: TYPE •

    $default  reduce using rule 11 (Specifier)


State 2

   13 StructSpecifier: STRUCT • ID LC DefList RC
   14                | STRUCT • ID
   15                | STRUCT • ID LC DefList error

    ID  shift, and go to state 8


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ε •  [$end]
    3           | • ExtDef ExtDefList
    3           | ExtDef • ExtDefList
    4 ExtDef: • Specifier ExtDecList SEMI
    5       | • Specifier SEMI
    6       | • Specifier FunDec CompSt
    7       | • Specifier ExtDecList error
    8       | • Specifier error
   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • ExtDecList error
    8       | Specifier • error
    9 ExtDecList: • VarDec
   10           | • VarDec COMMA ExtDecList
   16 VarDec: • ID
   17       | • VarDec LB INT RB
   18       | • VarDec LB INT error
   19 FunDec: • ID LP VarList RP
   20       | • ID LP RP
   21       | • ID LP VarList error
   22       | • ID LP error

    error  shift, and go to state 11
    ID     shift, and go to state 12
    SEMI   shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   12 Specifier: StructSpecifier •

    $default  reduce using rule 12 (Specifier)


State 8

   13 StructSpecifier: STRUCT ID • LC DefList RC
   14                | STRUCT ID •  [error, ID, SEMI]
   15                | STRUCT ID • LC DefList error

    LC  shift, and go to state 17

    $default  reduce using rule 14 (StructSpecifier)


State 9

    0 $accept: Program $end •

    $default  accept


State 10

    3 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 3 (ExtDefList)


State 11

    8 ExtDef: Specifier error •

    $default  reduce using rule 8 (ExtDef)


State 12

   16 VarDec: ID •  [error, LB, SEMI, COMMA]
   19 FunDec: ID • LP VarList RP
   20       | ID • LP RP
   21       | ID • LP VarList error
   22       | ID • LP error

    LP  shift, and go to state 18

    $default  reduce using rule 16 (VarDec)


State 13

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 14

    4 ExtDef: Specifier ExtDecList • SEMI
    7       | Specifier ExtDecList • error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec •  [error, SEMI]
   10           | VarDec • COMMA ExtDecList
   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB INT error

    LB     shift, and go to state 21
    COMMA  shift, and go to state 22

    $default  reduce using rule 9 (ExtDecList)


State 16

    6 ExtDef: Specifier FunDec • CompSt
   26 CompSt: • LC DefList StmtList RC

    LC  shift, and go to state 23

    CompSt  go to state 24


State 17

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   13                | STRUCT ID LC • DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error
   15                | STRUCT ID LC • DefList error
   39 DefList: ε •  [error, RC]
   40        | • Def DefList
   41 Def: • Specifier DecList SEMI
   42    | • Specifier DecList error
   43    | • error DecList SEMI

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error  [reduce using rule 39 (DefList)]
    RC     reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 27
    Def              go to state 28

    shift/reduce conflict on token error:
       39 DefList: ε •
       43 Def: • error DecList SEMI
      First example: STRUCT ID LC • error DecList SEMI DefList RC ExtDecList SEMI ExtDefList $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                                                        $end
             ↳ 1: ExtDefList
                  ↳ 3: ExtDef                                                                                    ExtDefList
                       ↳ 4: Specifier                                                            ExtDecList SEMI
                            ↳ 12: StructSpecifier
                                  ↳ 13: STRUCT ID LC DefList                                  RC
                                                     ↳ 40: Def                        DefList
                                                           ↳ 43: • error DecList SEMI
      Second example: STRUCT ID LC • error ExtDecList SEMI ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                            $end
             ↳ 1: ExtDefList
                  ↳ 3: ExtDef                                                        ExtDefList
                       ↳ 4: Specifier                                ExtDecList SEMI
                            ↳ 12: StructSpecifier
                                  ↳ 15: STRUCT ID LC DefList   error
                                                     ↳ 39: ε •



State 18

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error
   19 FunDec: ID LP • VarList RP
   20       | ID LP • RP
   21       | ID LP • VarList error
   22       | ID LP • error
   23 VarList: • ParamDec COMMA VarList
   24        | • ParamDec
   25 ParamDec: • Specifier VarDec

    error   shift, and go to state 29
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 30

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 32
    ParamDec         go to state 33


State 19

    7 ExtDef: Specifier ExtDecList error •

    $default  reduce using rule 7 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 21

   17 VarDec: VarDec LB • INT RB
   18       | VarDec LB • INT error

    INT  shift, and go to state 34


State 22

    9 ExtDecList: • VarDec
   10           | • VarDec COMMA ExtDecList
   10           | VarDec COMMA • ExtDecList
   16 VarDec: • ID
   17       | • VarDec LB INT RB
   18       | • VarDec LB INT error

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 15


State 23

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error
   26 CompSt: LC • DefList StmtList RC
   39 DefList: ε •  [IF, WHILE, RETURN, FLOAT, INT, CHAR, ID, NOT, MINUS, LP, LC, RC]
   40        | • Def DefList
   41 Def: • Specifier DecList SEMI
   42    | • Specifier DecList error
   43    | • error DecList SEMI

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    INT     reduce using rule 39 (DefList)
    CHAR    reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 37
    Def              go to state 28


State 24

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 25

   16 VarDec: • ID
   17       | • VarDec LB INT RB
   18       | • VarDec LB INT error
   43 Def: error • DecList SEMI
   44 DecList: • Dec
   45        | • Dec COMMA DecList
   46 Dec: • VarDec
   47    | • VarDec ASSIGN Exp

    ID  shift, and go to state 35

    VarDec   go to state 38
    DecList  go to state 39
    Dec      go to state 40


State 26

   16 VarDec: • ID
   17       | • VarDec LB INT RB
   18       | • VarDec LB INT error
   41 Def: Specifier • DecList SEMI
   42    | Specifier • DecList error
   44 DecList: • Dec
   45        | • Dec COMMA DecList
   46 Dec: • VarDec
   47    | • VarDec ASSIGN Exp

    ID  shift, and go to state 35

    VarDec   go to state 38
    DecList  go to state 41
    Dec      go to state 40


State 27

   13 StructSpecifier: STRUCT ID LC DefList • RC
   15                | STRUCT ID LC DefList • error

    error  shift, and go to state 42
    RC     shift, and go to state 43


State 28

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error
   39 DefList: ε •  [error, IF, WHILE, RETURN, FLOAT, INT, CHAR, ID, NOT, MINUS, LP, LC, RC]
   40        | • Def DefList
   40        | Def • DefList
   41 Def: • Specifier DecList SEMI
   42    | • Specifier DecList error
   43    | • error DecList SEMI

    error   shift, and go to state 25
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 39 (DefList)]
    IF      reduce using rule 39 (DefList)
    WHILE   reduce using rule 39 (DefList)
    RETURN  reduce using rule 39 (DefList)
    FLOAT   reduce using rule 39 (DefList)
    INT     reduce using rule 39 (DefList)
    CHAR    reduce using rule 39 (DefList)
    ID      reduce using rule 39 (DefList)
    NOT     reduce using rule 39 (DefList)
    MINUS   reduce using rule 39 (DefList)
    LP      reduce using rule 39 (DefList)
    LC      reduce using rule 39 (DefList)
    RC      reduce using rule 39 (DefList)

    Specifier        go to state 26
    StructSpecifier  go to state 7
    DefList          go to state 44
    Def              go to state 28

    shift/reduce conflict on token error:
       39 DefList: ε •
       43 Def: • error DecList SEMI
      First example: STRUCT ID Def • error DecList SEMI DefList DefList error ExtDecList SEMI ExtDefList $end
      Shift derivation
        $accept
        ↳ 0: Program                                                                                                                          $end
             ↳ 1: ExtDefList
                  ↳ 3: ExtDef                                                                                                      ExtDefList
                       ↳ 4: Specifier                                                                              ExtDecList SEMI
                            ↳ 12: StructSpecifier
                                  ↳ 15: STRUCT ID DefList                                            DefList error
                                                  ↳ 40: Def DefList
                                                            ↳ 40: Def                        DefList
                                                                  ↳ 43: • error DecList SEMI
      Second example: STRUCT ID LC Def • error ExtDecList SEMI ExtDefList $end
      Reduce derivation
        $accept
        ↳ 0: Program                                                                                      $end
             ↳ 1: ExtDefList
                  ↳ 3: ExtDef                                                                  ExtDefList
                       ↳ 4: Specifier                                          ExtDecList SEMI
                            ↳ 12: StructSpecifier
                                  ↳ 15: STRUCT ID LC DefList             error
                                                     ↳ 40: Def DefList
                                                               ↳ 39: ε •



State 29

   22 FunDec: ID LP error •

    $default  reduce using rule 22 (FunDec)


State 30

   20 FunDec: ID LP RP •

    $default  reduce using rule 20 (FunDec)


State 31

   16 VarDec: • ID
   17       | • VarDec LB INT RB
   18       | • VarDec LB INT error
   25 ParamDec: Specifier • VarDec

    ID  shift, and go to state 35

    VarDec  go to state 45


State 32

   19 FunDec: ID LP VarList • RP
   21       | ID LP VarList • error

    error  shift, and go to state 46
    RP     shift, and go to state 47


State 33

   23 VarList: ParamDec • COMMA VarList
   24        | ParamDec •  [error, RP]

    COMMA  shift, and go to state 48

    $default  reduce using rule 24 (VarList)


State 34

   17 VarDec: VarDec LB INT • RB
   18       | VarDec LB INT • error

    error  shift, and go to state 49
    RB     shift, and go to state 50


State 35

   16 VarDec: ID •

    $default  reduce using rule 16 (VarDec)


State 36

   10 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 10 (ExtDecList)


State 37

   26 CompSt: • LC DefList StmtList RC
   26       | LC DefList • StmtList RC
   27 StmtList: ε •  [RC]
   28         | • Stmt StmtList
   29 Stmt: • Exp SEMI
   30     | • CompSt
   31     | • RETURN Exp SEMI
   32     | • IF LP Exp RP Stmt
   33     | • IF LP Exp RP Stmt ELSE Stmt
   34     | • WHILE LP Exp RP Stmt
   35     | • Exp error
   36     | • RETURN Exp error
   37     | • IF LP Exp error Stmt
   38     | • WHILE LP Exp error Stmt
   48 Exp: • Exp ASSIGN Exp
   49    | • Exp AND Exp
   50    | • Exp OR Exp
   51    | • Exp LT Exp
   52    | • Exp LE Exp
   53    | • Exp GT Exp
   54    | • Exp GE Exp
   55    | • Exp NE Exp
   56    | • Exp EQ Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp MUL Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • Exp LB Exp RB
   67    | • Exp DOT ID
   68    | • ID
   69    | • INT
   70    | • FLOAT
   71    | • CHAR
   72    | • LP Exp error
   73    | • ID LP Args error
   74    | • ID LP error
   75    | • Exp LB Exp error

    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    RETURN  shift, and go to state 53
    FLOAT   shift, and go to state 54
    INT     shift, and go to state 55
    CHAR    shift, and go to state 56
    ID      shift, and go to state 57
    NOT     shift, and go to state 58
    MINUS   shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 23

    $default  reduce using rule 27 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 62
    Stmt      go to state 63
    Exp       go to state 64


State 38

   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB INT error
   46 Dec: VarDec •  [error, SEMI, COMMA]
   47    | VarDec • ASSIGN Exp

    ASSIGN  shift, and go to state 65
    LB      shift, and go to state 21

    $default  reduce using rule 46 (Dec)


State 39

   43 Def: error DecList • SEMI

    SEMI  shift, and go to state 66


State 40

   44 DecList: Dec •  [error, SEMI]
   45        | Dec • COMMA DecList

    COMMA  shift, and go to state 67

    $default  reduce using rule 44 (DecList)


State 41

   41 Def: Specifier DecList • SEMI
   42    | Specifier DecList • error

    error  shift, and go to state 68
    SEMI   shift, and go to state 69


State 42

   15 StructSpecifier: STRUCT ID LC DefList error •

    $default  reduce using rule 15 (StructSpecifier)


State 43

   13 StructSpecifier: STRUCT ID LC DefList RC •

    $default  reduce using rule 13 (StructSpecifier)


State 44

   40 DefList: Def DefList •

    $default  reduce using rule 40 (DefList)


State 45

   17 VarDec: VarDec • LB INT RB
   18       | VarDec • LB INT error
   25 ParamDec: Specifier VarDec •  [error, RP, COMMA]

    LB  shift, and go to state 21

    $default  reduce using rule 25 (ParamDec)


State 46

   21 FunDec: ID LP VarList error •

    $default  reduce using rule 21 (FunDec)


State 47

   19 FunDec: ID LP VarList RP •

    $default  reduce using rule 19 (FunDec)


State 48

   11 Specifier: • TYPE
   12          | • StructSpecifier
   13 StructSpecifier: • STRUCT ID LC DefList RC
   14                | • STRUCT ID
   15                | • STRUCT ID LC DefList error
   23 VarList: • ParamDec COMMA VarList
   23        | ParamDec COMMA • VarList
   24        | • ParamDec
   25 ParamDec: • Specifier VarDec

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 31
    StructSpecifier  go to state 7
    VarList          go to state 70
    ParamDec         go to state 33


State 49

   18 VarDec: VarDec LB INT error •

    $default  reduce using rule 18 (VarDec)


State 50

   17 VarDec: VarDec LB INT RB •

    $default  reduce using rule 17 (VarDec)


State 51

   32 Stmt: IF • LP Exp RP Stmt
   33     | IF • LP Exp RP Stmt ELSE Stmt
   37     | IF • LP Exp error Stmt

    LP  shift, and go to state 71


State 52

   34 Stmt: WHILE • LP Exp RP Stmt
   38     | WHILE • LP Exp error Stmt

    LP  shift, and go to state 72


State 53

   31 Stmt: RETURN • Exp SEMI
   36     | RETURN • Exp error
   48 Exp: • Exp ASSIGN Exp
   49    | • Exp AND Exp
   50    | • Exp OR Exp
   51    | • Exp LT Exp
   52    | • Exp LE Exp
   53    | • Exp GT Exp
   54    | • Exp GE Exp
   55    | • Exp NE Exp
   56    | • Exp EQ Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp MUL Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • Exp LB Exp RB
   67    | • Exp DOT ID
   68    | • ID
   69    | • INT
   70    | • FLOAT
   71    | • CHAR
   72    | • LP Exp error
   73    | • ID LP Args error
   74    | • ID LP error
   75    | • Exp LB Exp error

    FLOAT  shift, and go to state 54
    INT    shift, and go to state 55
    CHAR   shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 73


State 54

   70 Exp: FLOAT •

    $default  reduce using rule 70 (Exp)


State 55

   69 Exp: INT •

    $default  reduce using rule 69 (Exp)


State 56

   71 Exp: CHAR •

    $default  reduce using rule 71 (Exp)


State 57

   64 Exp: ID • LP Args RP
   65    | ID • LP RP
   68    | ID •  [error, ASSIGN, DOT, OR, AND, LT, LE, GT, GE, NE, EQ, PLUS, MINUS, MUL, DIV, RP, LB, RB, SEMI, COMMA]
   73    | ID • LP Args error
   74    | ID • LP error

    LP  shift, and go to state 74

    $default  reduce using rule 68 (Exp)


State 58

   48 Exp: • Exp ASSIGN Exp
   49    | • Exp AND Exp
   50    | • Exp OR Exp
   51    | • Exp LT Exp
   52    | • Exp LE Exp
   53    | • Exp GT Exp
   54    | • Exp GE Exp
   55    | • Exp NE Exp
   56    | • Exp EQ Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp MUL Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   63    | NOT • Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • Exp LB Exp RB
   67    | • Exp DOT ID
   68    | • ID
   69    | • INT
   70    | • FLOAT
   71    | • CHAR
   72    | • LP Exp error
   73    | • ID LP Args error
   74    | • ID LP error
   75    | • Exp LB Exp error

    FLOAT  shift, and go to state 54
    INT    shift, and go to state 55
    CHAR   shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 75


State 59

   48 Exp: • Exp ASSIGN Exp
   49    | • Exp AND Exp
   50    | • Exp OR Exp
   51    | • Exp LT Exp
   52    | • Exp LE Exp
   53    | • Exp GT Exp
   54    | • Exp GE Exp
   55    | • Exp NE Exp
   56    | • Exp EQ Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp MUL Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   62    | MINUS • Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • Exp LB Exp RB
   67    | • Exp DOT ID
   68    | • ID
   69    | • INT
   70    | • FLOAT
   71    | • CHAR
   72    | • LP Exp error
   73    | • ID LP Args error
   74    | • ID LP error
   75    | • Exp LB Exp error

    FLOAT  shift, and go to state 54
    INT    shift, and go to state 55
    CHAR   shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 76


State 60

   48 Exp: • Exp ASSIGN Exp
   49    | • Exp AND Exp
   50    | • Exp OR Exp
   51    | • Exp LT Exp
   52    | • Exp LE Exp
   53    | • Exp GT Exp
   54    | • Exp GE Exp
   55    | • Exp NE Exp
   56    | • Exp EQ Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp MUL Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   61    | LP • Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • Exp LB Exp RB
   67    | • Exp DOT ID
   68    | • ID
   69    | • INT
   70    | • FLOAT
   71    | • CHAR
   72    | • LP Exp error
   72    | LP • Exp error
   73    | • ID LP Args error
   74    | • ID LP error
   75    | • Exp LB Exp error

    FLOAT  shift, and go to state 54
    INT    shift, and go to state 55
    CHAR   shift, and go to state 56
    ID     shift, and go to state 57
    NOT    shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 77


State 61

   30 Stmt: CompSt •

    $default  reduce using rule 30 (Stmt)


State 62

   26 CompSt: LC DefList StmtList • RC

    RC  shift, and go to state 78


State 63

   26 CompSt: • LC DefList StmtList RC
   27 StmtList: ε •  [RC]
   28         | • Stmt StmtList
   28         | Stmt • StmtList
   29 Stmt: • Exp SEMI
   30     | • CompSt
   31     | • RETURN Exp SEMI
   32     | • IF LP Exp RP Stmt
   33     | • IF LP Exp RP Stmt ELSE Stmt
   34     | • WHILE LP Exp RP Stmt
   35     | • Exp error
   36     | • RETURN Exp error
   37     | • IF LP Exp error Stmt
   38     | • WHILE LP Exp error Stmt
   48 Exp: • Exp ASSIGN Exp
   49    | • Exp AND Exp
   50    | • Exp OR Exp
   51    | • Exp LT Exp
   52    | • Exp LE Exp
   53    | • Exp GT Exp
   54    | • Exp GE Exp
   55    | • Exp NE Exp
   56    | • Exp EQ Exp
   57    | • Exp PLUS Exp
   58    | • Exp MINUS Exp
   59    | • Exp MUL Exp
   60    | • Exp DIV Exp
   61    | • LP Exp RP
   62    | • MINUS Exp
   63    | • NOT Exp
   64    | • ID LP Args RP
   65    | • ID LP RP
   66    | • Exp LB Exp RB
   67    | • Exp DOT ID
   68    | • ID
   69    | • INT
   70    | • FLOAT
   71    | • CHAR
   72    | • LP Exp error
   73    | • ID LP Args error
   74    | • ID LP error
   75    | • Exp LB Exp error

    IF      shift, and go to state 51
    WHILE   shift, and go to state 52
    RETURN  shift, and go to state 53
    FLOAT   shift, and go to state 54
    INT     shift, and go to state 55
    CHAR    shift, and go to state 56
    ID      shift, and go to state 57
    NOT     shift, and go to state 58
    MINUS   shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 23

    $default  reduce using rule 27 (StmtList)

    CompSt    go to state 61
    StmtList  go to state 79
    Stmt      go to state 63
    Exp       go to state 64


State 64

   29 Stmt: Exp • SEMI
   35     | Exp • error
   48 Exp: Exp • ASSIGN Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • LT Exp
   52    | Exp • LE Exp
   53    | Exp • GT Exp
   54    | Exp • GE Exp
   55    | Exp • NE Exp
   56    | Exp • EQ Exp
   57    | Exp • PLUS Exp
   58    | Exp • MINUS Exp
   59    | Exp • MUL Exp
   60    | Exp • DIV Exp
   66    | Exp • LB Exp RB
   67    | Exp • DOT ID
   75    | Exp • LB Exp error
